--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,700;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,400;0,500;0,600;1,400;1,500&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 body{
     background-color: #eee;
-    font-family: sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 1em;
 }
 
@@ -40,6 +42,7 @@ body{
     border-width: 2px;
     border-bottom-style: dashed;
     display: flex;
+    transition: all .8s;
 }
 .result-contents .wpm {
     text-align: right;
@@ -68,4 +71,85 @@ body{
 }
 .result-progress .name-container .username {
     margin-right: 5px;
+}
+
+
+
+.input-panel {
+    background-color: #f6fbff;
+    padding: 1em;
+    border-radius: 10px;
+    border: 1px solid #C7D5D9;
+    margin: 10px 0 2px 0;
+}
+.game-view .input-panel .text-part{
+    margin-top: 10px;
+    width: 100%;
+    text-decoration-skip-ink: auto;
+    text-decoration-skip-ink: all;
+    font-family: Arial,serif;
+    font-size: 20px;
+}
+.input-panel .text-part {
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    line-height: 1.4;
+}
+
+.input-panel .text-input {
+    font-weight: 500;
+    font-family: monospace;
+    border: 1px solid #c7d5dd;
+    background: #fff;
+    margin-top: 0.5em;
+    text-align: justify;
+    color: #999999;
+    font-size: 20px;
+    width: 100%;
+    height: 35px;
+}
+.input-panel .text-input.text-warning{
+    color: #555;
+    background-color: #d08383;
+}
+
+.typing-cursor {
+    background-image: url(data:image/gif;base64,R0lGODlhAQAoAPABAERmZv///yH5BAg1AAAAIf8LTkVUU0NBUEUyLjADAQAAACwAAAAAAQAoAAACBYSPqctYACH5BAg1AAAALAAAAAABACgAgP///////wIFhI+py1gAOw==);
+    background-repeat: repeat-y;
+}
+.typing{
+    text-decoration: underline;
+}
+.green-text {
+    color: #99cc00;
+}
+.red-text {
+    color: #803333;
+    background-color: #f0a3a3;
+}
+
+
+.action-buttons {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+.action-buttons .start-race-btn {
+    display: inline-block;
+    font-size: 100%;
+    background-color: #3cc1a3;
+}
+.action-buttons button{
+    border: none;
+    display: inline-block;
+    padding: 0.75rem 1.75em;
+    border-radius: 5px;
+    color: #fff;
+    background-color: #ff9000;
+    font-weight: 700;
+    cursor: pointer;
 }
